# W5

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: cul_star.py
templates/: index.html  result.html
