[project]
name = "w5"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Takemoto-Tomohiro", email = "s2322039@stu.musashino-u.ac.jp" }
]
dependencies = [
    "uvicorn>=0.29.0",
    "fastapi>=0.111.0",
    "jinja2>=3.1.4",
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/w5"]
